// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expects to render the Page component 1`] = `
<div>
  <div
    class="tc"
  >
    <h1
      class="f1"
    >
      My Robofriends
    </h1>
    <div
      class="pa2"
    >
      <input
        aria-label="search robots"
        class="pa3 ba b--green bg-lightest-blue"
        name="searchBox"
        placeholder="search robots"
        type="search"
      />
    </div>
    <div
      style="overflow-y: scroll; border: 5px solid black; height: 800px;"
    >
      <div>
        <div
          class="bg-light-green dib br3 pa3 ma2 grow bw2 shadow-5"
        >
          <img
            alt="robots"
            height="200"
            src="https://robohash.org/1.png?size=200x200"
            width="200"
          />
          <div>
            <h2
              class="f5"
            >
              John Snow
            </h2>
            <p>
              john@company.com
            </p>
          </div>
        </div>
        <div
          class="bg-light-green dib br3 pa3 ma2 grow bw2 shadow-5"
        >
          <img
            alt="robots"
            height="200"
            src="https://robohash.org/2.png?size=200x200"
            width="200"
          />
          <div>
            <h2
              class="f5"
            >
              Kathelyn Snow
            </h2>
            <p>
              kate@company.com
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`expects to search a robot 1`] = `
<div>
  <div
    class="tc"
  >
    <h1
      class="f1"
    >
      My Robofriends
    </h1>
    <div
      class="pa2"
    >
      <input
        aria-label="search robots"
        class="pa3 ba b--green bg-lightest-blue"
        name="searchBox"
        placeholder="search robots"
        type="search"
      />
    </div>
    <div
      style="overflow-y: scroll; border: 5px solid black; height: 800px;"
    >
      <div>
        <div
          class="bg-light-green dib br3 pa3 ma2 grow bw2 shadow-5"
        >
          <img
            alt="robots"
            height="200"
            src="https://robohash.org/2.png?size=200x200"
            width="200"
          />
          <div>
            <h2
              class="f5"
            >
              Kathelyn Snow
            </h2>
            <p>
              kate@company.com
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
